# friendlyfire

./: README.md  bun.lockb  index.html  package.json  player.html  tailwind.config.js
.github/workflows/: release.yml
client/: .ignore  README.md  bun.lockb  client.sh  index.html  package.json  player.html  tailwind.config.js  vite.config.ts
client/src/: alert.css  displayMessage.ts  log.ts  main.ts  media.ts  ping.ts  player.css  player.ts  server.ts  serverStatus.ts  styles.css  tailwind.css  types.ts
client/src-tauri/: Cargo.toml  tauri.conf.json
client/src-tauri/capabilities/: default.json
client/src-tauri/src/: lib.rs  main.rs  media.rs  message.rs  play.rs  server.rs  store.rs
client/src-tauri/src/play/: image.rs  mod.rs  video.rs
client/src-tauri/src/server/: connect.rs  disconnect.rs  state.rs
client/src-tauri/src/ws/: close.rs  init.rs  messages.rs  mod.rs
client/src/editor/: main.ts
server/: .gitignore  Cargo.toml  Dockerfile  README.md  stuff
server/src/: main.rs
src/: alert.ts  avatar.ts  main.ts  media.ts  store.ts  styles.css  tailwind.css
src-tauri/: Cargo.toml  friendlyfire.desktop  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/src/: lib.rs  media.rs
src-tauri/src/server/: mod.rs
