[package]
name = "friendlyfire"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "friendlyfire_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-rc", features = [] }

[dependencies]
tauri = { version = "2.0.0-rc", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-http = { version = "2.0.0-rc", features = ["multipart", "stream"] }
tokio = { version = "1.40.0", features = ["full"] }
tokio-tungstenite = { version = "0.24.0", features = ["rustls-tls-webpki-roots", "tokio-native-tls"] }
tokio-util = { version = "0.7.12", features = ["full"] }
futures-util = { version = "0.3.30", features = ["sink"] }
tauri-plugin-log = "2.0.0-rc"
log = "0.4.22"
tauri-plugin-store = "2.0.0-rc"
tauri-plugin-dialog = "2.0.0-rc"
tauri-plugin-fs = "2.0.0-rc"
image = "0.25.2"
webp = "0.3.0"
url = "2.5.2"

# According to https://v2.tauri.app/fr/concept/size/#cargo-configuration
[profile.dev]
incremental = true # Compile your binary in smaller steps.

# According to https://v2.tauri.app/fr/concept/size/#cargo-configuration
[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true # Enables link-time-optimizations.
opt-level = "s" # Prioritizes small binary size. Use `3` if you prefer speed.
panic = "abort" # Higher performance by disabling panic handlers.
strip = true # Ensures debug symbols are removed.

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-window-state = "2.0.0-rc"
