[package]
name = "client"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "client_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-rc", features = [] }

[dependencies]
tauri = { version = "2.0.0-rc", features = [] }
tauri-plugin-shell = "2.0.0-rc"
tauri-plugin-dialog = "2.0.0-rc"
tauri-plugin-websocket = "2.0.0-rc"
tauri-plugin-log = { version = "2.0.0-rc", features = ["colored"] }
log = "0.4.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.39.3", features = ["full"] }
tokio-util = { version = "0.7.11", features = ["full", "io-util"] }
tokio-tungstenite = { version = "0.23.1", features = ["rustls-tls-webpki-roots"] }
futures-util = { version = "0.3.30", features = ["sink"] }
reqwest = { version = "0.12.7", features = ["stream"] }
lazy_static = "1.5.0"
image = "0.25.2"
ffmpeg-next = "7.0.4"
rustls = { version = "0.23.12", features = ["ring", "tls12"] }
tauri-plugin-http = "2.0.0-rc"
tauri-plugin-fs = "=2.0.0-rc.2"
tauri-plugin-store = "2.0.0-rc"

[profile.release]
panic = "abort" # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true # Enables link to optimizations
opt-level = "s" # Optimize for binary size
strip = true # Remove debug symbols

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-positioner = "2.0.0-rc"
